k8/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-lb
  labels:
    app: nginx-ingress
spec:
  externalIPs:
  - 192.168.99.100
  ports:
  - port: 80
    name: http
    targetPort: 80
  selector:
          app: nginx-ingress
