k8/service.yaml



apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
        #type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    #nodePort: 30100
  selector:
    app: webapp1
