k8/service2.yaml



apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
        #type: NodePort
  ports:
  - port: 80
    protocol: TCP
    #nodePort: 30100
  selector:
    app: webapp2
