k8/ingress-rules.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
  - host: webapp1.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp1-svc
          servicePort: 8080

  - host: webapp2.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp2-svc
          servicePort: 80
